mongoose and two models created and integrated

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="datlb3rvw"
+MONGODB_URL="mongodb+srv://alejoholmann99:xun02X9ouqVZbgUE@cluster0.5hoj4io.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
